module(
    name = "cthulhu"
)

# Go

# Load go toolchain from bcr
bazel_dep(name = "rules_go", version = "0.44.2")

# Load gazelle from bcr
bazel_dep(name = "gazelle", version = "0.35.0")

# Use gazelle extension to automatically load go deps
go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")

# Load go rules from gazelle
use_repo(
    go_deps
)

# C++

# Load extern archive files
extern_non_module_dependencies = use_extension("//:extern/deps.bzl", "extern_non_module_dependencies")

# Load extern archives
use_repo(extern_non_module_dependencies)

